--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/textViewTitle"
         android:textAlignment="center"
-        android:textColor="#009688"
+        android:textColor="#FF5722"
         android:text="@string/text_tile_warning"/>
 
     <View
@@ -30,13 +30,13 @@
         android:text="Messagem"/>
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/buttonOk"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/buttonOk"
         android:layout_marginTop="16dp"
         android:background="@drawable/bg_btn"
+        android:backgroundTint="#0433DC"
         android:text="@string/text_button_warning"
-        android:textColor="@color/white"
-        android:backgroundTint="#009688"/>
+        android:textColor="@color/white" />
 
 </LinearLayout>
