--- a/app/src/main/res/layout/fragment_recover_account.xml
+++ b/app/src/main/res/layout/fragment_recover_account.xml
@@ -85,6 +85,21 @@
                 android:layout_marginTop="8dp"
                 android:visibility="invisible"
                 tools:visibility="visible"/>
+
+            <TextView
+                android:id="@+id/textViewNome"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Adylla Moreira Lopes"
+                android:textColor="@color/white"
+                android:textSize="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="20dp"
+
+
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
         </LinearLayout>
     </LinearLayout>
 
