--- a/app/src/main/res/layout/fragment_recover_account.xml
+++ b/app/src/main/res/layout/fragment_recover_account.xml
@@ -64,7 +64,7 @@
                 android:id="@+id/editTextEmail"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:hint="@string/hint_edit_email"
+                android:hint="E-mail"
                 style="@style/EditTextTheme"
                 android:inputType="textEmailAddress"
                 android:layout_marginTop="4dp" />
@@ -81,7 +81,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:indeterminateTint="@color/white"
+                android:indeterminateTint="#03A9F4"
                 android:layout_marginTop="8dp"
                 android:visibility="invisible"
                 tools:visibility="visible"/>
@@ -91,8 +91,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Adylla Moreira Lopes"
-                android:textColor="@color/white"
-                android:textSize="20dp"
+                android:textColor="#03A9F4"
+                android:textSize="30dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
