--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -11,7 +11,8 @@
     <ImageView
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@drawable/kanbanlogo"
+        android:src="@drawable/kanban_logo_ebook"
+
         />
 
 
