--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -27,12 +27,14 @@
                 android:id="@+id/textDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="#31C1A7"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="Criar layout da tela de login do app" />
+                tools:text=" Fazer Modificações" />
 
             <ImageButton
                 android:layout_width="48dp"
@@ -45,7 +47,7 @@
                 app:layout_constraintTop_toTopOf="@+id/buttonEditar"
                 app:layout_constraintEnd_toStartOf="@+id/buttonDelete"
                 android:contentDescription="Anterior"
-                app:tint="#009688" />
+                app:tint="#04FBD2" />
 
 
             <androidx.appcompat.widget.AppCompatButton
@@ -54,10 +56,10 @@
                 android:layout_height="48dp"
                 android:layout_marginHorizontal="8dp"
                 android:background="@drawable/bg_btn"
-                android:backgroundTint="@color/color_delete"
+                android:backgroundTint="#FFEB3B"
                 android:text="Remover"
                 android:textAllCaps="false"
-                android:textColor="@color/white"
+                android:textColor="#FF5F2B"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="@+id/buttonEditar"
                 app:layout_constraintEnd_toStartOf="@+id/buttonEditar"
@@ -74,11 +76,11 @@
                 android:layout_height="48dp"
                 android:layout_marginHorizontal="8dp"
                 android:background="@drawable/bg_btn"
-                android:backgroundTint="#009688"
+                android:backgroundTint="#EDDF63"
                 android:text="Editar"
                 android:textAllCaps="false"
                 android:textSize="12sp"
-                android:textColor="@color/white"
+                android:textColor="#FF5F2B"
                 android:layout_marginTop="32dp"
                 android:layout_marginBottom="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -94,10 +96,10 @@
                 android:layout_height="48dp"
                 android:layout_marginHorizontal="8dp"
                 android:background="@drawable/bg_btn"
-                android:backgroundTint="@color/color_details"
+                android:backgroundTint="#FFEB3B"
                 android:text="Detalhes"
                 android:textAllCaps="false"
-                android:textColor="@color/white"
+                android:textColor="#FF5F2B"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="@+id/buttonEditar"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -118,7 +120,7 @@
                 app:layout_constraintStart_toEndOf="@+id/buttonDetails"
                 app:layout_constraintTop_toTopOf="@+id/buttonEditar"
                 android:contentDescription="Proximo"
-                app:tint="#009688"/>
+                app:tint="#04FBD2"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
