--- a/app/src/main/res/layout/fragment_doing.xml
+++ b/app/src/main/res/layout/fragment_doing.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        app:backgroundTint="@color/white"
+        app:backgroundTint="#FFEB3B"
         android:contentDescription="Add task"
         android:tint="#009688"
         android:clickable="true"
