--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -60,6 +60,12 @@
         <action
             android:id="@+id/action_homeFragment_to_formTaskFragment"
             app:destination="@id/formTaskFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_autentication2"
+            app:destination="@id/autentication"
+            app:popUpTo="true"
+            app:popUpToInclusive="true"
+            />
     </fragment>
     <fragment
         android:id="@+id/formTaskFragment"
