--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -63,7 +63,7 @@
         <action
             android:id="@+id/action_homeFragment_to_autentication2"
             app:destination="@id/autentication"
-            app:popUpTo="true"
+            app:popUpTo="@id/homeFragment"
             app:popUpToInclusive="true"
             />
     </fragment>
